# world_exporter

./: CMakeLists.txt  ExportWorldToMesh.cc  ExportWorldToMesh.hh  ExportWorldToMesh.qml  ExportWorldToMesh.qrc  GuiSystemPlugin.cc  GuiSystemPlugin.hh.gch  README.MD  export_plugin.cc  export_plugin.qml  export_plugin.qrc  shapes_test.sdf
docker/: Dockerfile.ignition  run.bash
meshes/: duck.dae  duck_2.dae  duck_old.dae
